--- a/style.css
+++ b/style.css
@@ -38,21 +38,28 @@
   border-radius: 5px;
 }
 
-.display {
+form .display {
   display: flex;
   justify-content: flex-end;
   margin: 20px 0;
 }
 
 form .display input {
-  /* text-align: left; */
+  text-align: right;
   box-shadow: none;
   /* flex: 1 gives an element a share of 
   the available space in a flex container. */
   flex: 1;
+  font-size: 45px;
   background-color: grey;
+  padding: 0 8px;
+}
+
+form input.operator {
+  color: aqua;
 }
 
 form input.equal {
   width: 145px;
+  color: aqua;
 }
